# benchmarks

./: README.md
database_write_performance/: Cargo.toml  README.md  build.rs  docker-compose.yml
database_write_performance/couchdb/: local.ini
database_write_performance/prometheus/: prometheus.yml
database_write_performance/proto/: barus.proto
database_write_performance/src/: generate.rs  main.rs
database_write_performance/src/db/: barus.rs  barus_grpc.rs  cassandra.rs  clickhouse.rs  cockroachdb.rs  couchdb.rs  elasticsearch.rs  etcd.rs  foundationdb.rs  influxdb_v2.rs  mariadb.rs  meilisearch.rs  mod.rs  mongodb.rs  mysql.rs  nats.rs  opensearch.rs  postgres.rs  prometheus.rs  redis.rs  rrdb.rs  scylla.rs  surrealdb.rs  tidb.rs  tikv.rs  timescaledb.rs  ydb.rs  yugabytedb.rs
fread_vs_mmap/: big-fread.c  big-mmap.c  small-fread.c  small-mmap.c
image-processing/: README.md  docker-compose.yml  locust.py  pyproject.toml  test.http  test.py
image-processing/fastapi-pillow/: Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml  run.sh
image-processing/fastify-sharp/: .gitignore  Dockerfile  README.md  package-lock.json  package.json  run.sh  server.js
image-processing/golang-std/: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
image-processing/hyper_imagers/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
image-processing/hyper_imagers/src/: main.rs
kv_latency/: Cargo.toml  README.md  docker-compose.yaml
kv_latency/src/: lib.rs  main.rs  memcached.rs  mysql.rs  postgres.rs  redis.rs  rstore.rs
pandas_vs_polars/: README.md
pandas_vs_polars/basic/: pandas_example.py  polars_example.py
pandas_vs_polars/lazy_pattern/: pandas_example.py  polars_example.py  polars_example_without_lazy.py
qdrant_benchmark/: .gitignore  Cargo.toml  README.md  docker-compose.yml
qdrant_benchmark/src/: insert.rs  main.rs  metadata.rs  read.rs
qdrant_vectortype_benchmark/: Cargo.toml  docker-compose.yml
qdrant_vectortype_benchmark/src/: benchmark_read.rs  generate_vector.rs  insert_to_qdrant.rs
queue_write_performance/: Cargo.toml  README.md  docker-compose.yml
queue_write_performance/src/: generate.rs  main.rs
queue_write_performance/src/queue/: kafka.rs  mod.rs  postgres.rs
rust_iter_vs_loop/: README.md  i32_vector_to_f64_vector.rs  i32_vector_to_f64_vector_with_filter.rs
vector_search/: .gitignore  Cargo.toml  README.md  docker-compose.yml  elasticsearch.http  milvus-standalone-docker-compose.yml  milvus-standalone.yml  milvus.http  opensearch.http  qdrant.http
vector_search/src/: bench_elasticsearch.rs  bench_milvus.rs  bench_opensearch.rs  bench_pg_hnsw.rs  bench_pg_ivfflat.rs  bench_qdrant.rs  gen.rs  generate.rs  init_elasticsearch.rs  init_milvus.rs  init_opensearch.rs  init_pgvector_hnsw.rs  init_pgvector_ivfflat.rs  init_qdrant.rs
vector_search/src/postgres/: mod.rs
