[package]
name = "database_write_performance"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
influxdb2 = "0.5.1"
mongodb = "3.1"
rand = "0.9.2"
scylla = "0.15"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "uuid"] }
tokio = { version = "1.47.1", features = ["full", "time"] }
uuid = { version = "1.18.0", features = ["v4"] }

[[bin]]
name = "main"
path = "./src/main.rs"

[[bin]]
name = "gen"
path = "./src/generate.rs"
