[package]
name = "database_write_performance"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
clickhouse = "0.13.3"
couch_rs = "0.10.1"
futures = "0.3.31"
influxdb2 = "0.5.1"
influxdb = { version = "0.7.2", features = ["derive"] }
mongodb = "3.1"
prometheus_remote_write = "0.2.0"
protobuf = "3.0"
rand = "0.9.2"
reqwest = { version = "0.12", features = ["json"] }
scylla = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "uuid"] }
tokio = { version = "1.47.1", features = ["full", "time"] }
uuid = { version = "1.18.0", features = ["v4"] }

[[bin]]
name = "main"
path = "./src/main.rs"

[[bin]]
name = "gen"
path = "./src/generate.rs"
