[package]
name = "kv_latency"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
redis = "0.29.2"
memcache = "0.18.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "mysql" ] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
