[package]
name = "qdrant_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
qdrant-client = "1.7"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
metrics = "0.21"
num-format = "0.4"
