[package]
name = "qdrant_vectortype_benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rayon = "1.10"
qdrant-client = "1.13"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "generate_vector"
path = "./src/generate_vector.rs"

[[bin]]
name = "insert_to_qdrant"
path = "./src/insert_to_qdrant.rs"

[[bin]]
name = "benchmark_read"
path = "./src/benchmark_read.rs"