[package]
name = "vector_search"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
anyhow = "1.0.92"

[[bin]]
name = "main"
path = "./src/main.rs"

[[bin]]
name = "gen"
path = "./src/gen.rs"

[[bin]]
name = "init_pgvector_ivfflat" 
path = "./src/init_pgvector_ivfflat.rs"