[package]
name = "vector_search"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
anyhow = "1.0.92"
half = "2.6.0"
reqwest = "0.12.15"
qdrant-client = "1.13.0"

[[bin]]
name = "main"
path = "./src/main.rs"

[[bin]]
name = "gen"
path = "./src/generate.rs"

[[bin]]
name = "init_pgvector_ivfflat" 
path = "./src/init_pgvector_ivfflat.rs"

[[bin]]
name = "init_pgvector_hnsw" 
path = "./src/init_pgvector_hnsw.rs"

[[bin]]
name = "init_elasticsearch" 
path = "./src/init_elasticsearch.rs"

[[bin]]
name = "init_qdrant" 
path = "./src/init_qdrant.rs"

[[bin]]
name = "init_milvus" 
path = "./src/init_milvus.rs"

[[bin]]
name = "bench_pg_ivfflat"
path = "./src/bench_pg_ivfflat.rs"

[[bin]]
name = "bench_pg_hnsw"
path = "./src/bench_pg_hnsw.rs"

[[bin]]
name = "bench_elasticsearch"
path = "./src/bench_elasticsearch.rs"

[[bin]]
name = "bench_qdrant"
path = "./src/bench_qdrant.rs"

[[bin]]
name = "bench_milvus"
path = "./src/bench_milvus.rs"
