[package]
name = "hyper_imagers"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp", "tiff", "bmp"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["stream"] }
bytes = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
